Fixes mobile image overflow on chrome mobile

--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ h6 {
   grid-area: c;
 }
 
-.image-carousel img {
+.bradley-cooper {
   height: 100%;
   width: 100%;
 }
@@ -238,9 +238,14 @@ h6 {
     margin-right: 0 !important;
   }
 
-  .image-carousel img{
-    max-height: calc(100% / 3 * 5);
-    max-width: 100vw ;
+  .image-carousel div {
+    height: 100vw;
+    overflow: hidden;
+  }
+
+  .bradley-cooper{
+    height: calc(100vw * 5 / 3);
+    width: 100vw ;
     overflow: hidden;
   }
 
